# LONGBOW

./: .gitignore  Player.py  Ship.py  System.py  SystemReport.py  app.py  config.INI  db.py  eve_data_tools.py  pyproject.toml  readme.md
resources/: JoveSystems.csv  drifter_holes.csv  mapRegions.csv  mapSolarSystemJumps.csv  mapSolarSystems.csv  solarsystemprecise.csv
static/styles/: main.css
templates/: character.html  character_fancy.html  characters.html  characters_fancy.html  menu.html  system.html  system_report.html  systems.html  view_report.html  view_system_reports.html
